weet ik niet meer

--- a/hoofdstukken/twee.tex
+++ b/hoofdstukken/twee.tex
@@ -109,3 +109,17 @@ Wanneer er geen nieuwe versie is beantwoord de server met een $304$: \newline
 	Date: Sat, 10 Oct 2015 15:39:29 \newline
 	Server: Apache/1.3.0 (Unix) \newline}
 	
+\subsection{Electronic Mail in the Internet}
+E-mail bestaat uit drie delen: \textbf{user agents} (het client programma op het eind-systeem van de gebruiker), \textbf{mail servers} (de servers die mails ontvangen en versturen) deze hebben zowel een client als server rol en het protocol om mails te versturen \textbf{Simple Mail Transfer Protocol (SMTP)}
+\subsubsection{SMTP}
+//TODO
+\subsubsection{Comparison with HTTP}
+
+\subsubsection{Mail Message Formats}
+
+\subsubsection{Mail Access Protocols}
+
+\subsection{DNS-The Internet's Directory Service}
+Word niet behandeld in dit boek. Kan je lezen op pagina 154 van Computer Networking
+
+\subsection{Peer-to-Peer File Distribution}
