--- a/hoofdstukken/een.tex
+++ b/hoofdstukken/een.tex
@@ -1,2 +1,10 @@
 \section{Computer Networks and the Internet}
-TODO
+
+\subsection{What is the Internet}
+
+\subsubsection{A Nuts-and-Bolts description}
+Het internet bestaat uit verschillende lagen de \textbf{kern} en de \textbf{hosts/end systems} Eind systemen zijn apparaten die de \textbf{application layer} protocol verstaan. Hier uit kan je verstaan dat het laptops, mobiels, computers, tv's, game consoles etc. Deze zijn met elkaar verbonden door middel van \textbf{communicaton links en packets switches} (coax cable, radio etc.) Al deze dingen hebben verschillende \textbf{transmission rate}. Deze worden altijd afgebeelt in *bits/s. Meestal zie je mb/s of kb/s. Om van bit naar byte te gaan moet je het getal gedeelt door 8 doen.
+\newline
+De meest voorkomende vorm van packet switchers zijn \textbf{routers en link-layer switches}. routers worden meer in de netwerk core gebruikt. Het pad wat een pakketje neemt van van host A naar host B te komen word een \textbf{route of path} genoemd.
+\newline
+Een \textbf{Internet Service Provider (ISP)} geeft je een mail adres.
