--- a/main.tex
+++ b/main.tex
@@ -28,6 +28,6 @@
 	\include{inleiding}
 	\include{hoofdstukken/een}
 	\include{hoofdstukken/twee}
-%	\include{hoofdstukken/drie}
+	\include{hoofdstukken/drie}
 \end{document}
  
