--- a/src/main.tex
+++ b/src/main.tex
@@ -29,4 +29,5 @@
 	\include{hoofdstukken/een}
 	\include{hoofdstukken/twee}
 	\include{hoofdstukken/drie}
+	\include{hoofdstukken/vier}
 \end{document}
