--- a/src/main.tex
+++ b/src/main.tex
@@ -30,4 +30,6 @@
 	\include{hoofdstukken/twee}
 	\include{hoofdstukken/drie}
 	\include{hoofdstukken/vier}
+	\include{hoofdstukken/vijf}
+	\include{hoofdstukken/zes}
 \end{document}
