--- a/src/hoofdstukken/zes.tex
+++ b/src/hoofdstukken/zes.tex
@@ -19,8 +19,8 @@ Het grootste gedeelte van de link laag is geimplementeerd in hardware.
 
 
 \subsection{Error-Detection and -Correction Techniques} \label{EDC}
-\textit{Bit-level error detection and correction} zijn twee services die veelal door de link laag wordt geleverd. De transport laag bied deze service ook, maar minder uitgebreid.
-Door fouten in de link kan er soms een bit of meer geflipt worden. Om deze te detecteren en te herstellen zijn een aantal technieken, waarvan er hier drie behandeld zullen worden.
+\textbf{Bit-level error detection and correction} zijn twee services die veelal door de link laag wordt geleverd. De transport laag bied deze service ook, maar minder uitgebreid.
+Door fouten in de link kan er soms een bit of meer geflipt worden. Om deze te detecteren en te herstellen zijn een aantal technieken, waarvan er hier drie behandeld zullen worden. De error detection techniek is niet water dicht. Er kunnen nog steeds \textbf{undetected bit errors} optreden.
 
 \subsubsection{Parity Checks} 
 De simpelste vorm van error detection is een enkele \textbf{parity bit}. Bij een even parity scheme zorgt de parity bit ervoor dat het aantal 1s in heb bericht even is.
